# digital_resume

./: .gitignore  README.md  pyproject.toml
conf/: asgi.py  settings.py  urls.py  wsgi.py
