[tool.poetry]
name = "digital_resume"
version = "0.1.0"
description = ""
authors = ["Amir Hossein Moayedi <amir.h.moayedi@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
